fix: board creation